now it should run on run command

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'application'
+
+mainClassName = "ru.highcode.web.parser.EktoplasmMusic"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
